# link-shortener

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  error_handlers.py  errors.py  model.py  schema.py  service.py  settings.py
app/templates/: base.html  doc.html  not_valid_url.html
app/templates/modules/: doc.html  index.html  response_error.html  short_url.html
app/views/: api.py  web.py
openapi/: openapi.yml
tests/: conftest.py  service_test.py  views_test.py
tests/views/: api_test.py  web_test.py
