[project]
name = "avito"
version = "0.1.0"
description = ""
authors = [
    {name = "frukun"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-xdist = "^3.7.0"

[tool.pytest.ini_options]
addopts = ['-n', 'auto']
